# robotics_v1_exercises

./: LICENSE  README.md
src/teslatronic_client/: CMakeLists.txt  package.xml
src/teslatronic_client/include/teslatronic_client/external_api/: TeslatronicClientExternalBridge.h
src/teslatronic_client/src/: main.cpp
src/teslatronic_client/src/external_api/: TeslatronicClientExternalBridge.cpp
src/teslatronic_interfaces/: CMakeLists.txt  package.xml
src/teslatronic_interfaces/action/: ChargeBattery.action
src/teslatronic_interfaces/msg/: BatteryInfo.msg  EngineStartStop.msg  Map.msg
src/teslatronic_interfaces/srv/: QueryBatteryInfo.srv  QueryMap.srv
src/teslatronic_server/: CMakeLists.txt  package.xml
src/teslatronic_server/include/teslatronic_server/: Application.h
src/teslatronic_server/include/teslatronic_server/core/: Battery.h  CarControlUnit.h  Map.h
src/teslatronic_server/include/teslatronic_server/external_api/: BatteryExternalBridge.h  TeslatronicServerExternalBridge.h
src/teslatronic_server/include/teslatronic_server/teslatronic_common/: CommonDefines.h  FunctionalDefines.h  MessageHelpers.h  Ros2Communicator.h  TeslatronicTopics.h
src/teslatronic_server/src/: Application.cpp  main.cpp
src/teslatronic_server/src/core/: Battery.cpp  CarControlUnit.cpp  Map.cpp
src/teslatronic_server/src/external_api/: BatteryExternalBridge.cpp  TeslatronicServerExternalBridge.cpp
src/teslatronic_server/src/teslatronic_common/: MessageHelpers.cpp  Ros2Communicator.cpp
